login saves input data for register + back button now works

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -88,7 +88,8 @@
             android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Back"
+            android:layout_marginStart="40dp"
+            android:text="@string/back"
             android:onClick="back"
             />
 
