--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -52,7 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/date"
             android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_centerHorizontal="true">
 
             <TextView
                 android:id="@+id/quantity_label"
@@ -70,22 +71,12 @@
 
         </LinearLayout>
 
-        <RatingBar
-            android:id="@+id/ratedInfo"
-            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/quantity_layout"
-            android:padding="8dp"
-            android:isIndicator="true"
-            android:gravity="center" />
-
         <Button
             android:id="@+id/add_to_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/purchase_ticket_s"
-            android:layout_below="@id/ratedInfo"
+            android:layout_below="@id/quantity_layout"
             android:layout_centerHorizontal="true"/>
 
     </RelativeLayout>
